--- a/index.html
+++ b/index.html
@@ -4,9 +4,40 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Web Course HW 1</title>
   </head>
   <body>
-    <p>hello</p>
+    <br />
+    <h1>مرحباً!</h1>
+    <h2>هذا موقعي الأول</h2>
+    <h3>اسمي عذاري</h3>
+    <br />
+
+    <p style="background-color: #fad2e1">
+      اسمي
+      <i> <b> عذاري </b></i>
+      واخترت دورة برمجة المواقع
+      <br />
+      لآني اريد انعش ذاكرتي في برمجة المواقع
+    </p>
+    <!-- 20-December-2021 -->
+    <br />
+    <img
+      src="https://roost.nbcuni.com/bin/viewasset.html/content/dam/Peacock/Campaign/landingpages/library/theoffice/mainpage/office-social-min.png/_jcr_content/renditions/original"
+      width="300"
+      title="favorite show"
+    />
+    <br />
+    <a href="https://youtube.com"> Youtube</a>
+    <br />
+    <iframe
+      width="560"
+      height="315"
+      src="https://www.youtube.com/embed/1ZYbU82GVz4"
+      title="YouTube video player"
+      frameborder="0"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+      allowfullscreen
+    ></iframe>
   </body>
 </html>
